=========================
Changes in lovely.testing
=========================

trunk
=====

2009/10/29 0.1.0a2
==================

 - added coverage

 - added MySQLDatabaseLayer

 - added mysql server

 - added PGDatabaseLayer

 - added pgsql server


2009/10/14 0.1.0a1
==================

- initial release
