@@ -2,6 +2,7 @@
 extends = coverage.cfg
 develop = .
 parts = test
+        nginx
         coverage
         coverage-test coverage-out-dir
         coverage-report coverage-report-dir
@@ -9,5 +10,11 @@ parts = test
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color']
-eggs = lovely.testlayers
+eggs = lovely.testlayers [mysql, pgsql]
+
+[nginx]
+# this part is used to generate an nginx installation for the nginx testlayer
+recipe = zc.recipe.cmmi
+url = http://sysoev.ru/nginx/nginx-0.7.62.tar.gz
+extra_options = --with-debug
 
